0.9.7.3-dev
* Fixed error handling for findAndModify while still working for mongodb 1.8.6 (Issue #450)

0.9.7.2-2 2011-12-16
* Fixes infinite streamRecords QueryFailure fix when using Mongos (Issue #442)

0.9.7.2-1 2011-12-16
* ~10% perf improvement for ObjectId#toHexString (Issue #448, https://github.com/aheckmann)
* Only using process.nextTick on errors emitted on callbacks not on all parsing, reduces number of ticks in the driver
* Changed parsing off bson messages to use process.nextTick to do bson parsing in batches if the message is over 10K as to yield more time to the event look increasing concurrency on big mongoreply messages with multiple documents

0.9.7.2 2011-12-15
* Added SSL support for future version of mongodb (VERY VERY EXPERIMENTAL)
	* pass in the ssl:true option to the server or replicaset server config to enable
	* a bug either in mongodb or node.js does not allow for more than 1 connection pr db instance (poolSize:1).
* Added getTimestamp() method to objectID that returns a date object
* Added finalize function to collection.group
	* function group (keys, condition, initial, reduce, finalize, command, callback)
* Reaper no longer using setTimeout to handle reaping. Triggering is done in the general flow leading to predictable behavior.
	* reaperInterval, set interval for reaper (default 10000 miliseconds)
	* reaperTimeout, set timeout for calls (default 30000 miliseconds)
	* reaper, enable/disable reaper (default false)
* Work around for issues with findAndModify during high concurrency load, insure that the behavior is the same across the 1.8.X branch and 2.X branch of MongoDb
* Reworked multiple db's sharing same connection pool to behave correctly on error, timeout and close
* EnsureIndex command can be executed without a callback (Issue #438)
* Eval function no accepts options including nolock (Issue #432)
	* eval(code, parameters, options, callback) (where options = {nolock:true})

0.9.7.1-2 2011-11-27