@@ -655,7 +655,7 @@ Collection.prototype.find = function find () {
 
   if (len === 2) {
     // backwards compat for options object
-    var test = ['limit','sort','fields','skip','hint','explain','snapshot','timeout','tailable', 'batchSize', 'raw']
+    var test = ['limit','sort','fields','skip','hint','explain','snapshot','timeout','tailable', 'batchSize', 'raw', 'read']
       , is_option = false;
 
     for (var idx = 0, l = test.length; idx < l; ++idx) {
@@ -732,13 +732,13 @@ Collection.prototype.find = function find () {
   // If we have overridden slaveOk otherwise use the default db setting
   options.slaveOk = options.slaveOk != null ? options.slaveOk : this.db.slaveOk;
   var o = options;
-  
+
   // callback for backward compatibility
   if (callback) {
     // TODO refactor Cursor args
-    callback(null, new Cursor(this.db, this, selector, fields, o.skip, o.limit, o.sort, o.hint, o.explain, o.snapshot, o.timeout, o.tailable, o.batchSize, o.slaveOk, o.raw));
+    callback(null, new Cursor(this.db, this, selector, fields, o.skip, o.limit, o.sort, o.hint, o.explain, o.snapshot, o.timeout, o.tailable, o.batchSize, o.slaveOk, o.raw, o.read));
   } else {
-    return new Cursor(this.db, this, selector, fields, o.skip, o.limit, o.sort, o.hint, o.explain, o.snapshot, o.timeout, o.tailable, o.batchSize, o.slaveOk, o.raw);
+    return new Cursor(this.db, this, selector, fields, o.skip, o.limit, o.sort, o.hint, o.explain, o.snapshot, o.timeout, o.tailable, o.batchSize, o.slaveOk, o.raw, o.read);
   }
 };
 
