@@ -777,7 +777,6 @@ Db.prototype.numberOfHandlers = function() {
 }
 
 var __executeQueryCommand = function(self, db_command, options, callback) {
-  // console.log("-------------------- __executeQueryCommand")
   // Options unpacking
   var read = options['read'] != null ? options['read'] : false;
   var raw = options['raw'] != null ? options['raw'] : self.raw;
@@ -786,15 +785,12 @@ var __executeQueryCommand = function(self, db_command, options, callback) {
   
   // If we got a callback object
   if(callback instanceof Function && !onAll) {
-    // // Let's the out outgoing request Id
-    // var requestId = db_command.getRequestId().toString();
     // Fetch either a reader or writer dependent on the specified read option
-    var connection = read ? self.serverConfig.checkoutReader() : self.serverConfig.checkoutWriter();    
+    var connection = read == true || read === 'secondary' ? self.serverConfig.checkoutReader() : self.serverConfig.checkoutWriter();    
     // Override connection if needed
     connection = specifiedConnection != null ? specifiedConnection : connection;
     // Ensure we have a valid connection
     if(connection == null) {
-      // console.log("-----------------------------------------------__executeQueryCommand :: 0 :: [no open connections]")
       return callback(new Error("no open connections"));
     }
 
@@ -827,7 +823,6 @@ var __executeQueryCommand = function(self, db_command, options, callback) {
       connection = specifiedConnection != null ? specifiedConnection : connection;
       // Ensure we have a valid connection
       if(connection == null) {
-        // console.log("-----------------------------------------------__executeQueryCommand :: 1 :: [no open connections]")
         return callback(new Error("no open connections"));
       }
 
@@ -853,10 +848,8 @@ var __executeQueryCommand = function(self, db_command, options, callback) {
       db_command.updateRequestId();
     }
   } else {
-    // // Let's the out outgoing request Id
-    // var requestId = db_command.getRequestId().toString();
     // Fetch either a reader or writer dependent on the specified read option
-    var connection = read ? self.serverConfig.checkoutReader() : self.serverConfig.checkoutWriter();
+    var connection = read == true || read === 'secondary' ? self.serverConfig.checkoutReader() : self.serverConfig.checkoutWriter();
     // Override connection if needed
     connection = specifiedConnection != null ? specifiedConnection : connection;
     // Ensure we have a valid connection
